update linux shell

--- a/linux/命令行.md
+++ b/linux/命令行.md
@@ -3,7 +3,7 @@
 
 ### 查看一下本机防火墙现有的规则列表
 	iptables -L --line-number
-	
+
 ### 修改环境变量之后重新编译
 
 	source /etc/profile
@@ -37,17 +37,39 @@
  	启动：# systemctl start  firewalld
 
 	查看状态：# systemctl status firewalld 或者 firewall-cmd --state
-
+	
 	停止：# systemctl disable firewalld
-
+	
 	禁用：# systemctl stop firewalld
-
+	
 	查看当前打开的端口：firewall-cmd --zone=public --list-ports
-
+	
 	添加端口： firewall-cmd --zone=public --add-port=8180/tcp --permanent 
-
+	
 	重置：firewall-cmd --reload
 
 ### 查看文件夹下各个文件大小
 方法1.du -h --max-depth=1 /root{filePath}
 方法2.ll -lh
+
+### 查看、修改命令行历史数据
+
+```shell
+#查看命令行历史数据
+history
+#查看指定相关的命令行历史
+history | grep "rm -rf "
+
+#删除指定的记录
+#方法一：编辑历史记录文件,
+	vim ~/.bash_history
+	history -r
+#方法二：命令行删除,num 来自上文的 history | grep 
+	history -d [num]
+#方法一、二修改的命令也在记录
+
+#方法三：直接不记录，设置命令行之前如果有空格，不记录命令，修改之后命令之前加space, = 不要有空格 
+	export HISTCONTROL=ignorespace
+
+```
+
