--- a/linux/命令行.md
+++ b/linux/命令行.md
@@ -1,4 +1,4 @@
-												Linux 命令行
+​											Linux 命令行
 
 
 ### 查看一下本机防火墙现有的规则列表
@@ -34,19 +34,26 @@
 	查看内核版本
 		uname -r
  ### centos 7 防火墙操作
- 	启动：# systemctl start  firewalld
+```shell
+#启动：
+systemctl start  firewalld
+#查看状态：
+systemctl status firewalld 或者 firewall-cmd --state
 
-	查看状态：# systemctl status firewalld 或者 firewall-cmd --state
-	
-	停止：# systemctl disable firewalld
-	
-	禁用：# systemctl stop firewalld
-	
-	查看当前打开的端口：firewall-cmd --zone=public --list-ports
-	
-	添加端口： firewall-cmd --zone=public --add-port=8180/tcp --permanent 
-	
-	重置：firewall-cmd --reload
+#停止
+systemctl disable firewalld
+
+#禁用：
+systemctl stop firewalld
+
+#查看当前打开的端口：
+firewall-cmd --zone=public --list-ports
+
+#添加端口： firewall-cmd --zone=public --add-port=8180/tcp --permanent 
+
+#重置：
+firewall-cmd --reload
+```
 
 ### 查看文件夹下各个文件大小
 方法1.du -h --max-depth=1 /root{filePath}
@@ -72,4 +79,63 @@ history | grep "rm -rf "
 	export HISTCONTROL=ignorespace
 
 ```
+
+### 查看系统信息
+
+```shell
+# 内存使用情况
+free -m
+# 进程情况,显示或管理执行中的程序
+top 
+#查看指定进程id下所有线程信息(-H 显示线程信息 -p 指定进程id)
+top -H -p {pid}
+# 磁盘及分区情况
+df -h
+#查看端口占用
+	lsof -i:{port}
+	netstat -apn | grep {port}
+# 报告当前系统的进程状态
+ps aux {pid}
+ps -ef 
+#两种方式结果一样，输出格式不一样
+
+#显示指定进程下所有线程(显示线程时间、id)
+ps -mp pid -o thread,tid,time
+
+
+```
+
+文件传输
+
+```shell
+# scp
+# 将文件导出到本地
+scp -P {port} {user}@{ip}:{sourcePath} {targetPath}
+# 将文件上传到服务器
+scp -P {port} {targetPath} {user}@{ip}:{sourcePath}
+```
+
+
+
+# 案例
+
+## 线上cpu占用100%排查
+
+```shell
+# 思路：查找到占用最高的进程，根据进程找到占用高的线程，利用jstack工具打印堆栈信息
+
+# 查看可疑进程
+top 
+# 根据进程id查找高占用线程
+ps -mp {pid} -o THREAD(必须大写),tid,time
+# 将可疑线程id转为16进制
+printf "%x\n" {tid}
+# 打印堆栈信息
+ jstack {pid} | grep {16进制的tid} -A 60
+ 
+
+
+```
+
+
 
